src/apt/snapshots/packhub__apt__index__tests__apt_indices-2.snap
---
source: src/apt/index.rs
expression: release
---
Origin: . stable
Label: . stable
Suite: stable
Codename: stable
Date: [DATE]
Architectures: amd64
Components: main
Description: Generated by packhub
MD5Sum:
 a7a899656b17057ca8d11f72795f7632     1368      main/binary-amd64/Packages
 3db94630abad4f6a59aed3f3095436e4     825      main/binary-amd64/Packages.gz
SHA1:
 14fb46db1939a078fb86abd659b1119dd67e617c     1368      main/binary-amd64/Packages
 891e262000230983e733d4631ba0eb9859945cc7     825      main/binary-amd64/Packages.gz
SHA256:
 6eef82adbd7d262f9d94941e99f046604a1681c1f9f3a6f4cc0792c0ce5ce713     1368      main/binary-amd64/Packages
 4777849b61148c8825c43b0c71c1b30ed782043ba2840ea0915f5af8a2ee65a0     825      main/binary-amd64/Packages.gz
SHA512:
 24b8d6278a63025fa2e9ed0b2ca1afbeb5d8f3fa2c4737d77b258d24dc30618c3cc6a3957944130c4ec04c42be455710cc1643d1e7d71caeedb7242ee996efb7     1368      main/binary-amd64/Packages
 181a587e11e6ecc364dd53fa9b76cc47d647478988b1d08b5ed4fa77957dfcdbff9e85ff395f6b0ece9a922404283598e996adc78a16d646c08808cb811290d8     825      main/binary-amd64/Packages.gz
