src/apt/snapshots/packhub__apt__index__tests__apt_indices.snap
---
source: src/apt/index.rs
expression: packages
---
Architecture: amd64
Depends: ibus (>= 1.5.1), libc6 (>= 2.29), libgcc-s1 (>= 4.2), libglib2.0-0 (>= 2.12.0), libibus-1.0-5 (>= 1.5.1), libqt5core5a (>= 5.12.2), libqt5gui5 (>= 5.0.2) | libqt5gui5-gles (>= 5.0.2), libqt5network5 (>= 5.0.2), libqt5widgets5 (>= 5.0.2), libstdc++6 (>= 5.2), libzstd1 (>= 1.3.2)
Description: OpenSource Bengali input method
 OpenBangla Keyboard is an OpenSource, Unicode compliant Bengali Input Method for GNU/Linux systems. It&apos;s a full fledged Bengali input method with typing automation tools, includes many famous typing methods such as Avro Phonetic, Probhat, Munir Optima, National (Jatiya) etc.
 .
 Most of the features of Avro Keyboard are present in OpenBangla Keyboard. So Avro Keyboard users will feel at home with OpenBangla Keyboard in Linux.
 .
Homepage: https://openbangla.github.io/
Maintainer: OpenBangla Team <openbanglateam@gmail.com>
Package: openbangla-keyboard
Priority: optional
Section: utils
Version: 2.0.0
Installed-Size: 12263
MD5sum: 3b026000480fda79cfd30976f569a820
SHA1: 38e8fa44c049460169bf0b892724f9f1e50d4e50
SHA256: d368f56f14d07d0f32482d9e56e68750ed1b4f68157fc53f6574c6fde6c4457e
SHA512: b096eb4d8090533f77615e982a01421181680d25a9d78c723b420c398b376a209655d9540463ed022a40ff31a0f75b1866b03047944752e14a2d5c50bbe81e9b
Size: 5332906
Filename: pool/stable/2.0.0/OpenBangla-Keyboard_2.0.0-ubuntu20.04.deb
