src/apt/snapshots/packhub__apt__index__tests__multiple_packages-2.snap
---
source: src/apt/index.rs
expression: release
---
Origin: . stable
Label: . stable
Suite: stable
Codename: stable
Date: [DATE]
Architectures: amd64
Components: main
Description: Generated by packhub
MD5Sum:
 d7018c22c4ba80f82a65a51838a2de04     2729      main/binary-amd64/Packages
 ea29d1a5bb92d3ca67d4255fba2d9b9d     1105      main/binary-amd64/Packages.gz
SHA1:
 e174e07e3935d1fd9369d326314c20c15d2cb00f     2729      main/binary-amd64/Packages
 674871aef664938568c16f5c3b47a80a0e3819b4     1105      main/binary-amd64/Packages.gz
SHA256:
 88ed2749512fe49f8c06c98e594885244b10bcec68baf5ba3957648dac7f167e     2729      main/binary-amd64/Packages
 5e1e907053cd26e11fa95cb4b9eb8cbcd1bd4038dad36486105a07d8698cb0f7     1105      main/binary-amd64/Packages.gz
SHA512:
 7c35acfb5aa3643ccf052a1f3dd631d1a660866558579cece5f2b189dc94afe52645ad927711cb4bd89be8ce47df2e03b3f42ec5563368993d951fa576d823d3     2729      main/binary-amd64/Packages
 458cd606edd7bbcd34ce5c8e87285d7e2ec0d572dfedc2d40c78d5601cc60df513bd5e22d55e2299b15cb0f809a44751cdfe708dbcafa462942871b0dad5d325     1105      main/binary-amd64/Packages.gz
